--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Table Activity" />
+
+        <Button
+            android:id="@+id/aboutActivityButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="About Activity" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
